Fix tota11y contrast issues
Change pokemon names on button to black to fix tota11y contrast issues.

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,7 @@ h1 {
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
+  color: black;
   font-size: 16px;
   margin: 4px 2px;
   width: 10em;
